Config Error Logging System overhaul